# jupyter-facets

./: .gitignore  .gitmodules  README.rst  pyproject.toml  update_facets_overview.sh  update_gitignore.sh
examples/: simple_example.ipynb
ipyfacets/: __init__.py
ipyfacets/overview/: base_feature_statistics_generator.py  feature_statistics_generator_test.py
tests/: test_ipyfacets.py
