[tool.poetry]
name = "ipyfacets"
version = "0.1.0"
description = "The facets project(https://github.com/PAIR-code/facets) wrapper for jupyter"
authors = ["porkbeans <mizuo.taka@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
